<resources>
    <string name="app_name">چارپایه</string>
    <string name="news">تازه ها</string>
    <string name="category">دسته بندی ها</string>
    <string name="collections">لیست ها</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="new_collection">ساخت لیست جدید</string>
    <string name="phone_number_or_email">شماره همراه یا ایمیل</string>
    <string name="password">رمز عبور</string>
    <string name="login">ورود</string>
    <string name="not_signed_up">آیا قبلا ثبت نام نکرده اید؟</string>
    <string name="already_signed_up">آیا قبلا حساب کاربری ایجاد کرده اید ؟</string>
    <string name="name">نام</string>
    <string name="sign_up">ثبت نام</string>
    <string name="no_internet_connection">مشکل در برقراری ارتباط با شبکه اینترنت</string>
    <string name="share">اشتراک گذاری</string>
    <string name="no_collection">لیستی ذخیره نشده است</string>
    <string name="list_name">نام لیست</string>
    <string name="create">ساخت</string>
    <string name="no_bookmark">بوکمارکی ثبت نشده است</string>
    <string name="delete">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="no_item">لیست خالی می باشد</string>
    <string name="add_to_collection">افزودن به لیست</string>
    <string name="new1">جدید</string>
    <string name="submit">ثبت</string>
    <string name="try_again">تلاش مجدد</string>
    <string name="setting">تنظیمات</string>
    <string name="about_chaarpaye">درباره چارپایه</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="report_problem">گزارش مشکل در نرم افزار</string>
    <string name="introduce_a_place">معرفی مکان یا رویداد به چارپایه</string>
    <string name="ok">خُب</string>
    <string name="link">لینک</string>
    <string name="want">میخوامش!</string>
    <string name="report_crash_message">برای گزارش مشکل در اپلیکیشن ، در تلگرام به @MashAdmin  پیام بدهید و یا به سایت چارپایه  chaarpaye.ir  مراجعه فرمایید</string>
    <string name="intro_place_or_event_message">برای معرفی مکان یا رویداد ، در تلگرام به @MashAdmin  پیام بدهید و یا به سایت چارپایه  chaarpaye.ir  مراجعه فرمایید</string>
</resources>
