<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/constraintLayout3">

        <ImageView
            android:id="@+id/setting_toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/setting_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textDirection="inherit"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <Button
            android:id="@+id/setting_about_chaarpaye"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            android:onClick="onAboutChaarpayeClick"
            android:paddingRight="8dp"
            android:text="@string/about_chaarpaye"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textDirection="inherit"
            android:textSize="16sp" />


        <Button
            android:id="@+id/setting_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            android:onClick="onReportClick"
            android:paddingRight="8dp"
            android:text="@string/report_problem"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textDirection="inherit"
            android:textSize="16sp" />

        <Button
            android:id="@+id/setting_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:onClick="onIntroduceClick"
            android:paddingRight="8dp"
            android:text="@string/introduce_a_place"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textDirection="inherit"
            android:textSize="16sp" />

        <Button
            android:id="@+id/setting_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/grey"
            android:onClick="onLogoutClick"
            android:paddingRight="8dp"
            android:text="@string/logout"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textDirection="inherit"
            android:textSize="16sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>