<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/register_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:alpha="0.4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textDirection="inherit"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/sign_up_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:indicatorName="LineScalePartyIndicator"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/sign_up_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/name"
        android:imeOptions="actionDone"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textDirection="inherit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_progress_bar"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="none"
        app:met_floatingLabelText="@string/name"
        app:met_floatingLabelTextColor="@color/white"
        app:met_hideUnderline="false"
        app:met_primaryColor="@color/white"
        app:met_singleLineEllipsis="false"
        app:met_textColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/sign_up_poe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number_or_email"
        android:imeOptions="actionDone"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textDirection="inherit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_name"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="none"
        app:met_floatingLabelText="@string/phone_number_or_email"
        app:met_floatingLabelTextColor="@color/white"
        app:met_hideUnderline="false"
        app:met_primaryColor="@color/white"
        app:met_singleLineEllipsis="false"
        app:met_textColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/sign_up_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textDirection="inherit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_poe"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="none"
        app:met_floatingLabelText="@string/password"
        app:met_floatingLabelTextColor="@color/white"
        app:met_hideUnderline="false"
        app:met_primaryColor="@color/white"
        app:met_singleLineEllipsis="false"
        app:met_textColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />
    
    <TextView
        android:id="@+id/sign_up_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textDirection="inherit"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/sign_up_already_signed_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textDirection="inherit"
        android:textColor="@color/white"
        android:text="@string/already_signed_up"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_sign_up"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

</android.support.constraint.ConstraintLayout>